Change '系统状态' to 'Guiwu' in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <div class="hidden md:block text-right">
-                <div class="text-xs text-slate-500">系统状态</div>
+                <div class="text-xs text-slate-500">Guiwu</div>
                 <div class="text-emerald-400 text-sm font-bold flex items-center gap-2 justify-end">
                     <span class="w-2 h-2 rounded-full bg-emerald-400 animate-pulse"></span> 在线
                 </div>
